<resources>
    <string name="app_name">MyMovies</string>
    <string name="label_logo">LO\nGO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="label_login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="explore">EXPLORE</string>
    <string name="please_login">Please Login</string>
    <string name="guest">Guest</string>
    <string name="login">LOGIN</string>
    <string name="people">PEOPLE</string>
    <string name="watchlist">WATCHLIST</string>
    <string name="rated">RATED</string>
    <string name="favourites">FAVOURITES</string>
    <string name="full_cast_text">see full cast &amp; crew</string>
    <string name="profile">Profile</string>
    <string name="watchlist_nav">Watchlist</string>
    <string name="favorites">Favorites</string>
    <string name="people_nav">People</string>
    <string name="home">Home</string>
</resources>
